--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 3.3.0+7
 
 environment:
   sdk: ^3.5.4
@@ -40,25 +40,33 @@ dependencies:
   http: ^1.2.2
   fluttertoast: ^8.2.10
   shared_preferences: ^2.3.3
-  skeletonizer: ^1.4.2
+  skeletonizer: ^2.0.1
   indexed: ^0.0.8
   badges: ^3.1.2
-  intl: ^0.19.0
+  intl: ^0.20.2
   image_picker: ^1.1.2
-  google_maps_flutter: ^2.10.0
   geolocator: ^13.0.2
   image: ^4.5.2
   syncfusion_flutter_charts: ^28.1.41
   dropdown_button2: ^2.3.9
   dropdown_search: ^6.0.2
   dio: ^5.8.0+1
-  firebase_core: ^3.10.1
-  firebase_messaging: ^15.2.1
+  firebase_core: ^3.13.1
+  firebase_messaging: ^15.2.6
   flutter_native_splash: ^2.4.4
   multi_dropdown: ^3.0.1
   flutter_localization: ^0.3.2
   photo_view: ^0.15.0
   carousel_slider: ^5.0.0
+  onesignal_flutter: ^5.1.2
+  syncfusion_flutter_xlsio: ^28.2.12
+  path_provider: ^2.1.5
+  open_file: ^3.5.10
+  flutter_svg: ^2.1.0
+  flutter_slidable: ^4.0.0
+  month_year_picker: ^0.5.0+1
+  package_info_plus: ^8.0.3
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
